--- a/style/index.module.css
+++ b/style/index.module.css
@@ -3,11 +3,15 @@
     display: grid;
 
     min-height: 100vh;
-    min-height: stretch;
 
     gap: 0.5rem;
     place-content: center;
     justify-items: center;
+
+    @supports (appearance: none)
+    {
+        min-height: fill-available;
+    }
 }
 
 .links
